adds public folder with css and js

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,8 @@
 <html>
+<head>
+  <link rel="stylesheet" type="text/css" href="css/application.css">
+  <script src="js/application.js"></script>
+</head>
 <body>
   <h1>The greatest website ever</h1>
   <div class="output"><%= @message %></div>
